dark mode fixed

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -1,38 +1,3 @@
-.wrapper {
-    background-image: url(../public/assets/images/bg-light.webp);
-}
-
-@media (max-width: 600px) {
-    .wrapper{
-        background-image: url(../public/assets/images/bg-light-mobile.webp);
-    }
-}
-
-
 .title {
     font-size: 10rem;
 }
-/*
-
-.rippleWhite {
-    background-color: #fff;
-    border-radius: 100%;
-    animation: ripple-animation 1.5s infinite ease-out;
-}
-
-.rippleBlack {
-    background-color: #000;
-    border-radius: 100%;
-    animation: ripple-animation 1.5s infinite ease-out;
-}
-
-@keyframes ripple-animation {
-    0% {
-        transform: scale(0.1);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 0;
-    }
-}*/
